# github-org-cloner

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
github_org_cloner/: __init__.py  cli.py  cloner.py  config.py  github_client.py  setup_runner.py
tests/: __init__.py  test_cli.py  test_cloner.py  test_github_client.py
